fixed error where running out of mandates would end with no result displayed

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-<p><strong>Privacy notice:</strong> Data is sent to the server for calculation. If you're concerned, <a href="https://github.com/the-dbp/dhondt-web" target="_blank">download and run this locally</a>.</p>
+<p><strong>Privacy notice:</strong> Data is sent to the server for calculation. If you're concerned, <a href="https://github.com/the-dbp/dhondt-web" target="_blank">download and run this locally</a>. Also see: <a href="https://mahf.dk/mandater/"target="_blank">https://mahf.dk/mandater/</a></p>
   <h1>Dhondt Election Input</h1>
   <form id="inputForm">
     <label>Total Votes: <input type="number" id="totalVotes" required></label><br>
